Added drawing canvas

--- a/src/style/style.css
+++ b/src/style/style.css
@@ -1,3 +1,6 @@
+*{
+  box-sizing: border-box;
+}
 @font-face {
   font-family: "Otsutome";
   src: url("../../assets/font/Otsutome_font_ver3/OtsutomeFont_Ver3.ttf");
@@ -5,4 +8,12 @@
 body{
   margin:0;
   font-family: "Otsutome";
+}
+canvas{
+  border: 1px solid gray;
+}
+#clearBtn{
+  position: absolute;
+  right:0;
+  top:55%;
 }
